# jellyfin-shim-manager

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh  update.sh
src/jellyfin_shim_manager/: auth.py  cli.py  config.py  deps.py  instances.py  monitor.py  privileged.py  qrgen.py  reap.py  systemd.py  web.py
src/jellyfin_shim_manager/static/: style.css  theme.js
src/jellyfin_shim_manager/templates/: admin_dashboard.html  admin_login.html  base.html  join.html
